# autogpt

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile.autogpt  Dockerfile.orchgpt  EXAMPLES.md  IAC.md  INSTALLATION.md  NYLAS.md  README.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: check.yml  clippy.yml  docker-ci.yml  docker-publish.yml  linux-release.yml  windows-release.yml
auto-derive/: Cargo.toml
auto-derive/src/: lib.rs
auto-net/: Cargo.toml
auto-net/src/: lib.rs
autogpt/: .bumpversion.toml  Cargo.toml  INSTALLATION.md  README.md
autogpt/src/: agents.rs  cli.rs  collaboration.rs  common.rs  lib.rs  macros.rs  mcp.rs  message.rs  orchestrator.rs  prelude.rs  prompts.rs  traits.rs  tui.rs
autogpt/src/agents/: agent.rs  architect.rs  backend.rs  designer.rs  frontend.rs  generic.rs  git.rs  intent.rs  mailer.rs  manager.rs  mop.rs  optimizer.rs  types.rs
autogpt/src/cli/: autogpt.rs  models.rs  orchgpt.rs  readline.rs  session.rs  settings.rs  skills.rs  tui.rs
autogpt/src/cli/autogpt/: ast.rs  commands.rs  generator.rs  parser.rs  utils.rs
autogpt/src/cli/autogpt/commands/: build.rs  mcp.rs  new.rs  run.rs  test.rs
autogpt/src/common/: input.rs  memory.rs  utils.rs
autogpt/src/mcp/: client.rs  manager.rs  settings.rs  types.rs
autogpt/src/prompts/: architect.rs  backend.rs  designer.rs  frontend.rs  generic.rs  manager.rs  optimizer.rs
autogpt/src/traits/: agent.rs  composite.rs  functions.rs
autogpt/src/tui/: app.rs  state.rs  tabs.rs  theme.rs  utils.rs
autogpt/src/tui/tabs/: analytics.rs  main.rs  prompts.rs  settings.rs  theme.rs
autogpt/tests/: agents.rs  architect.rs  autogpt.rs  backend.rs  designer.rs  frontend.rs  functions.rs  git.rs  mailer.rs  manager.rs  mcp_agent.rs  mcp_live.rs  mcp_manager.rs  mcp_settings.rs  mcp_types.rs  optimizer.rs  orchestrator.rs  swarm.rs  traits.rs
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  introduction.md
docs/src/advanced/: docker.md  feature-flags.md  iac-protocol.md  mcp-auth.md  mcp-cli.md  mcp-env.md  mcp-sdk.md  mcp-tui.md  mcp.md  memory-pinecone.md  orchestrator.md
docs/src/agents/: architect-gpt.md  backend-gpt.md  designer-gpt.md  frontend-gpt.md  generic-gpt.md  git-gpt.md  mailer-gpt.md  manager-gpt.md  optimizer-gpt.md  overview.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/modes/: direct-prompt.md  interactive.md  orchestrated.md  standalone.md
docs/src/sdk/: autogpt-builder.md  custom-agents.md  macros.md  overview.md  traits.md
docs/theme/: custom.css  custom.js  fonts.css  main.css
examples/: basic.ipynb
examples/gemini/: README.md
examples/gemini-custom-agent/: Cargo.toml  README.md
examples/gemini-custom-agent/src/: main.rs
examples/gemini-iac-client-server/: Cargo.toml  README.md
examples/gemini-memory/: README.md
examples/gemini-memory/src/: main.rs
examples/gemini/src/: main.rs
examples/mcp-custom-agent/: Cargo.toml  README.md
examples/mcp-custom-agent/src/: main.rs
examples/mcp-manager/: Cargo.toml  README.md
examples/mcp-manager/src/: main.rs
examples/mcp-server-registration/: Cargo.toml  README.md
examples/mcp-server-registration/src/: main.rs
examples/openai/: README.md
iac-rs/: Cargo.toml  README.md
iac-rs/benches/: benchmark.rs
iac-rs/src/: client.rs  crypto.rs  lib.rs  message.rs  prelude.rs  server.rs  traits.rs  transport.rs
iac-rs/tests/: client.rs  message.rs  network.rs  server.rs  signer.rs  transport.rs
