[package]
name = "autogpt"
version = "0.4.0"
edition = "2024"
description = """
🦀 A Pure Rust Framework For Building AGIs.
"""
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
license = "MIT"
documentation = "https://docs.rs/autogpt"
repository = "https://github.com/wiseaidotdev/autogpt"
homepage = "https://wiseai.dev"
readme = "README.md"
categories = ["science"]
keywords = ["agi", "ai", "machine-learning", "llm", "stable-diffusion"]
exclude = ["/workspace", "/examples", "/docs"]

[[bin]]
name = "autogpt"
path = "src/bin/autogpt.rs"

[[bin]]
name = "orchgpt"
path = "src/bin/orchgpt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
webbrowser = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
auto-derive = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
duckduckgo = { workspace = true }
iac-rs = { workspace = true, optional = true }

uuid = { version = "=1.23.1", features = ["v4"] }
tokio = { version = "=1.52.2", default-features = false, features = ["full"] }
reqwest = { version = "^0.12.24", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
gems = { version = "0.1.5", optional = true }
getimg = { version = "0.0.1", optional = true }
nylas = { version = "0.0.8", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter", "fmt", "ansi"], optional = true }
tracing-appender = { version = "0.2.5", optional = true }
git2 = { version = "0.20.4", optional = true }
pinecone-sdk = { version = "0.1.2", optional = true }
openai_dive = { version = "=1.4.2", optional = true, features = ["stream"] }
anthropic-ai-sdk = { version = "=0.2.27", optional = true }
x-ai = { version = "0.1.0", optional = true }
cohere-rust = { version = "0.6.0", optional = true }
api_huggingface = { version = "0.3.0", optional = true, default-features = false, features = ["inference", "inference-streaming", "embeddings", "models", "embeddings-similarity", "env-config"] }
indicatif = { version = "0.18.4", optional = true }
console = { version = "0.16.3", optional = true }
convert_case = { version = "0.11.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml_edit = { version = "0.23.9", optional = true, features = ["serde"] }
crates_io_api = { version = "0.12.0", optional = true }
semver = { version = "1.0.28", optional = true }
futures-util = { version = "0.3.32", optional = true }
termimad = { version = "0.34.1", optional = true }
dirs = { version = "6.0.0", optional = true }
dialoguer = { version = "0.12.0", optional = true }
bytes = "1.11.1"

[features]
default = []
gpt = []
mop = []
img = ["getimg"]
git = ["git2"]
gem = ["gems"]
xai = ["x-ai"]
net = ["iac-rs"]
mail = ["nylas"]
oai = ["openai_dive"]
mem = ["pinecone-sdk"]
cld = ["anthropic-ai-sdk"]
co = ["cohere-rust"]
hf = ["api_huggingface"]
cli = [
    "clap",
    "dirs",
    "semver",
    "console",
    "termimad",
    "indicatif",
    "toml_edit",
    "dialoguer",
    "serde_yaml",
    "futures-util",
    "convert_case",
    "crates_io_api",
    "tracing-appender",
    "tracing-subscriber",
]
mcp = ["dirs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tempfile = "3"
