[package]
name = "iac-rs"
version = "0.0.8"
description = "🛰️ IAC Protocol for Inter and Intra Agents Communications."
edition = "2024"
rust-version = "1.85"
license = "MIT"
keywords = ["iac", "agents", "ai", "autogpt", "agi"]
categories = ["web-programming", "science"]
repository = "https://github.com/wiseaidotdev/autogpt"
documentation = "https://docs.rs/iac-rs"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "tests", "benches"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ed25519-compact = "2.2.0"
prost =  { version = "0.14.3", default-features = false }
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = "0.23.40"
zstd = "0.13.3"
tokio = { version = "1.52.2", default-features = false }
rand = "0.10.1"
auto-net = "0.0.1"
async-trait = { workspace = true }
futures = { workspace = true }
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
ser = ["serde"]

# TODO: Add std/non-std support
# std = ["prost/std", "rand/std", "bytes/std"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
plotters = { version = "0.3.7", features = ["fontconfig-dlopen"] }
tokio = { version = "1.52.2", features = ["full"] }
tracing-subscriber = "0.3.23"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benchmark"
harness = false
